# gostly-ai-proxy

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-NOTES.md  LICENSE.md  README.md  docker-compose.yml  install.sh
.github/: release-notes-footer.md
.github/workflows/: build.yml  dep-audit.yml  installer-smoke.yml  release.yml
Formula/: gostly.rb
benches/: resource_store_lookup_bench.rs  resource_store_stress_bench.rs
bucket/: gostly.json
scoop/: gostly.json
scripts/: cli-smoke.sh
src/: chaos.rs  io.rs  main.rs  markov_chaos.rs  matcher.rs  proxy_handler_tests.rs  resource_store.rs  statechart.rs  telemetry.rs  wide_events.rs  workload_class.rs
src/statecharts/: charge.json  customer.json  invoice.json  order.json  subscription.json
tools/: update-release-shas.sh
