[package]
name = "gostly-agent"
version = "0.1.0"
edition = "2021"

# Build: cargo build --release
[features]
default = ["oss"]
oss = []

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "full"] }

# HTTP body utilities (for collecting incoming request body)
http-body-util = "0.1"

# Observability
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum-prometheus  = "0.7"
metrics          = "0.23"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono     = { version = "0.4", features = ["serde"] }

# HTTP client (supports HTTP + HTTPS backends)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

uuid = { version = "1", features = ["v4"] }

# Chaos injection
rand = "0.8"
parking_lot = "0.12"

# Hot-reload (v0.3): cross-platform fs watcher (inotify / FSEvents / ReadDirectoryChangesW)
# + lock-free Arc swapping so in-flight requests keep the snapshot they started with.
notify = "6.1"
arc-swap = "1"

# SIGHUP-driven reload (v0.3) — tokio-friendly stream of POSIX signals.
# Optional path: `MOCK_RELOAD_STRATEGY=signal` for k8s/Docker setups where
# fs events on shared volumes are unreliable.
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"

# CLI parser. The default `gostly` invocation with no subcommand boots the
# proxy; subcommands are short HTTP clients to a running proxy. `derive`
# is required for the #[derive(Parser)] / #[derive(Subcommand)] macros and
# `env` lets `--upstream` fall back to the BACKEND_URL env var.
clap = { version = "4", features = ["derive", "env"] }
